--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ MathJax.Hub.Config({
 
 
   <br>
-  <BR>Bureau 333 au troisi&egrave;me &eacute;tage
+  <BR>Bureau 203 au deuxi&egrave;me &eacute;tage
   <BR>E-mail: <i>olivier.ramare@REMOVE_THISuniv-amu.OHOHfr</i>
    <BR><FONT SIZE =-1>
        ... o&ugrave; il faut &ocirc;ter REMOVE_THIS et OHOH pour m'&eacute;crire
