--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -275,7 +275,8 @@ an additive asymptotic basis whose order is very well controled.
 	"", "Eigenvalues2.pdf",
 	"http://www.functiones.amu.edu.pl/",
 	"Functiones et Approximatio",
-	"vol. 37", 2007, "399--427","");
+	      "vol. 37", 2007, "399--427",
+	      "https://projecteuclid.org/journals/functiones-et-approximatio-commentarii-mathematici/volume-37/issue-2/Eigenvalues-in-the-large-sieve-inequality/10.7169/facm/1229619662.full");
 	nbr();</script>
       <div class="resumecontent">
 	We provide some evidence that the eigenvalues of the hermitian form
@@ -584,7 +585,8 @@ all moduli $k \le 72$&nbsp; and other small moduli.
       "", "PsiTildeSimple-Acta-2.pdf",
       "http://journals.impan.gov.pl/aa/",
       "Acta Arithmetica",
-      "vol 159 no 2", 2013, "113--122");
+	    "vol. 159 no 2", 2013, "113--122",
+	    "https://www.impan.pl/pl/wydawnictwa/czasopisma-i-serie-wydawnicze/acta-arithmetica/all/159/2/82334/explicit-estimates-for-the-summatory-function-of-varlambda-n-n-from-the-one-of-varlambda-n");
       nbr();</script>
     <div class="resumecontent">We prove that the error term $\sum_{\substack{n\le
       x}}\Lambda(n)/n-\log x+\gamma$
@@ -609,7 +611,8 @@ all moduli $k \le 72$&nbsp; and other small moduli.
       "", "MuLog-4.pdf",
       "http://www.functiones.amu.edu.pl/",
       "Functiones et Approximatio",
-      "vol. 49", 2013, "229--240");
+	    "vol. 49", 2013, "229--240",
+	   "https://projecteuclid.org/journals/functiones-et-approximatio-commentarii-mathematici/volume-49/issue-2/Some-elementary-explicit-bounds-for-two-mollifications-of-the-Moebius/10.7169/facm/2013.49.2.3.full");
       nbr();</script>
     <div class="resumecontent">We prove that the sum
         $\sum_{\left\{\substack{d\le x,\\
@@ -630,7 +633,7 @@ all moduli $k \le 72$&nbsp; and other small moduli.
       "http://journals.impan.gov.pl/aa/",
       "Acta Arithmetica",
       "vol 157 no 4", 2013, "365--379",
-      "")
+      "https://www.impan.pl/en/publishing-house/journals-and-series/acta-arithmetica/all/157/4/82991/from-explicit-estimates-for-primes-to-explicit-estimates-for-the-mobius-function")
       nbr();</script>
     <div class="resumecontent">We prove two explicit estimates
       respectively slightly stronger than $|\sum_{d\le D}\mu(d)|/D\le
@@ -645,7 +648,7 @@ all moduli $k \le 72$&nbsp; and other small moduli.
       "http://journals.impan.gov.pl/aa/",
       "Acta Arithmetica",
       "vol 165 no 1", 2014, "1--10",
-      "");
+      "https://www.impan.pl/pl/wydawnictwa/czasopisma-i-serie-wydawnicze/acta-arithmetica/all/165/1/83068/explicit-estimates-on-the-summatory-functions-of-the-mobius-function-with-coprimality-restrictions");
       nbr();</script>
     <div class="resumecontent">We prove that
       $|\sum_{\left\{\substack{d\le x,\\(d,q)=1}\right.}\mu(d)/d|\le
@@ -662,7 +665,7 @@ all moduli $k \le 72$&nbsp; and other small moduli.
       "http://www.ams.org/publications/journals/journalsframework/mcom",
       "Mathematics of Computation",
       "vol 84 no 293", 2015, "1359--1387",
-      "");
+      "https://www.ams.org/journals/mcom/2015-84-293/S0025-5718-2014-02914-1/");
       nbr();</script>
     <div class="resumecontent">
       We prove that $|\sum_{d\le x}\mu(d)/d|\log x\le 1/69$&nbsp;  when $x\ge
@@ -693,7 +696,7 @@ all moduli $k \le 72$&nbsp; and other small moduli.
       "http://www.ams.org/publications/journals/journalsframework/mcom",
       "Mathematics of Computation",
       "vol 88 no 319", 2019, "2383--2388",
-      "");
+      "https://www.ams.org/journals/mcom/2019-88-319/S0025-5718-2019-03449-X/");
       nbr();</script>
     <div class="resumecontent">
       The initial paper had a sign mistake (in the definition of $h'$
@@ -788,7 +791,8 @@ all moduli $k \le 72$&nbsp; and other small moduli.
        Paper("Chowla's conjecture: from the Liouville function to the Moebius function",
       "", "ChowlaMoebius-7.pdf", "",
       "Ergodic Theory and Dynamical Systems in their Interactions with Arithmetics and Combinatorics<br> (ed. S. Ferenczi, J. Ku&lstrok;aga-Przymus and M. Lema&nacute;czyk)",
-      "LNM 2213", 2018, "317-323");
+	     "LNM 2213", 2018, "317-323",
+	    "https://link.springer.com/book/10.1007/978-3-319-74908-2");
       nbr();</script>
     <div class="resumecontent">This aim of this short note is to try
   to clarify the links between different versions of the ``Chowla
@@ -801,7 +805,8 @@ all moduli $k \le 72$&nbsp; and other small moduli.
       Paper("On the missing Log factor",
       "", "MissingLogFactor-3-withbib.pdf", "",
       "Ergodic Theory and Dynamical Systems in their Interactions with Arithmetics and Combinatorics<br> (ed. S. Ferenczi, J. Ku&lstrok;aga-Przymus and M. Lema&nacute;czyk)",
-      "LNM 2213", 2018, "293-315");
+	    "LNM 2213", 2018, "293-315",
+	   "https://link.springer.com/book/10.1007/978-3-319-74908-2");
       nbr();</script>
     <div class="resumecontent">This paper is the detailled written
       account of a talk with the same title given during the
@@ -982,7 +987,8 @@ all moduli $k \le 72$&nbsp; and other small moduli.
       "Andrew Granville", "granvilleramare.pdf",
       "https://www.cambridge.org/core/journals/mathematika#",
       "Mathematika",
-      "vol. 43 no 1", 1996, "73--107", "");
+	    "vol. 43 no 1", 1996, "73--107",
+	    "https://londmathsoc.onlinelibrary.wiley.com/doi/abs/10.1112/S0025579300011608");
       nbretoile();</script>
     <div class="resumecontent">
       For many years, Paul Erd&ouml;s has asked intriguing questions
@@ -1616,7 +1622,7 @@ e^v}}\nolimits'\frac{\Lambda(n)}n+v+\frac12\log(\frac{1-e^{v}}{1+e^v})+\gamma
       "http://www.springer.com/mathematics/journal/10474",
       "Acta Mathematica Hungarica",
       "vol. 143 no 1", 2014, "75--80",
-      "");
+      "https://link.springer.com/article/10.1007/s10474-014-0408-2");
       nbr();</script>
     <div class="resumecontent">
       <img src="../trucs/lefevre-pascal.jpeg" height="110px"
@@ -1641,7 +1647,8 @@ e^v}}\nolimits'\frac{\Lambda(n)}n+v+\frac12\log(\frac{1-e^{v}}{1+e^v})+\gamma
       "", "TruncatedPerron-5.pdf",
       "http://ambp.cedram.org/",
       "Annales Blaise Pascal",
-      "vol. 33 no 1", 2016, "109--128");
+	    "vol. 33 no 1", 2016, "109--128",
+	   "https://ambp.centre-mersenne.org/item/?id=AMBP_2016__23_1_109_0");
       nbr();</script>
     <div class="resumecontent">We prove two general and ready for use
       formulae relating variations of the summatory function $\sum_{\le
@@ -1710,7 +1717,7 @@ e^v}}\nolimits'\frac{\Lambda(n)}n+v+\frac12\log(\frac{1-e^{v}}{1+e^v})+\gamma
       "https://www.impan.pl/en/publishing-house/journals-and-series/acta-arithmetica",
       "Acta Arithmetica",
       "vol. 173 no 2", 2015, "183--196",
-      "");
+      "https://www.impan.pl/en/publishing-house/journals-and-series/acta-arithmetica/all/173/2/91488/discrepancy-estimates-for-some-linear-generalized-monomials");
       nbr();</script>
     <div class="resumecontent">
        <img src="../trucs/hofer-roswitha.png" height="110px"
@@ -1908,7 +1915,7 @@ e^v}}\nolimits'\frac{\Lambda(n)}n+v+\frac12\log(\frac{1-e^{v}}{1+e^v})+\gamma
       "https://www.impan.pl/pl/wydawnictwa/czasopisma-i-serie-wydawnicze/colloquium-mathematicum",
       "Colloquium Mathematicum",
       "vol. 147", 2017, "275--313",
-      "");
+      "https://www.impan.pl/en/publishing-house/journals-and-series/colloquium-mathematicum/all/147/2/92047/explicit-averages-of-non-negative-multiplicative-functions-going-beyond-the-main-term");
       nbr();</script>
     <div class="resumecontent">
       <img src="../trucs/akhilesh-p.jpeg" height="110px"
@@ -1938,7 +1945,6 @@ e^v}}\nolimits'\frac{\Lambda(n)}n+v+\frac12\log(\frac{1-e^{v}}{1+e^v})+\gamma
       "http://www.springer.com/mathematics/journal/11501",
       "Proceedings of the Steklov Institute of Mathematics",
       "vol. 296", 2017, "52--64",
-      "",
       "Translation in Tr. Mat. Inst. Steklova 296, 58--71 (2017); addendum ibid. 296, 251--255 (2017)");
       nbr();</script>
     <div class="resumecontent"><img src="../trucs/cilleruelo-javier-2.jpeg" height="110px"
@@ -2121,7 +2127,8 @@ analytic conductor of $f$ for some specific choices of $I$.
 	    "Planik-04.pdf",
 	    "https://www.ias.ac.in/listing/issues/reso",
 	    "Resonance, Journal of Science Education",
-	    "vol. 28 no. 11", 2023, "1685--1699", "");
+	    "vol. 28 no. 11", 2023, "1685--1699",
+	    "https://www.ias.ac.in/article/fulltext/reso/028/11/1685-1699");
       nbr();</script>
     <div class="resumecontent">
       The Planik is a two dimensional version of a game close to the
