--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -364,7 +364,8 @@ an additive asymptotic basis whose order is very well controled.
 	"D. S. Ramana", "dense_primes_israel.pdf",
 	"http://www.ma.huji.ac.il/~ijmath/",
 	"Israel Journal of Mathematics",
-	"vol. 199", 2014, "955--974", "");
+	      "vol. 199", 2014, "955--974",
+	      "https://link.springer.com/article/10.1007/s11856-013-0075-y");
 	nbr();</script>
       <div class="resumecontent">
 	<img src="../trucs/Luminy2015-3.jpg" width="100px"
