--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -533,7 +533,8 @@ all moduli $k \le 72$&nbsp; and other small moduli.
       "Andrew Granville", "granvilleramare.pdf",
       "https://www.cambridge.org/core/journals/mathematika#",
       "Mathematika",
-      "vol. 43 no 1", 1996, "73--107", "");
+	    "vol. 43 no 1", 1996, "73--107",
+	    "https://londmathsoc.onlinelibrary.wiley.com/doi/abs/10.1112/S0025579300011608");
       nbr();</script>
     <div class="resumecontent">
 	<img src="../trucs/andrew-granville.jpeg" width="80px"
