--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -1803,10 +1803,14 @@ e^v}}\nolimits'\frac{\Lambda(n)}n+v+\frac12\log(\frac{1-e^{v}}{1+e^v})+\gamma
     </div>
   </li>
     <!-- ============================= -->
-    <li class="paper preprint"><script language="javascript">
-	Preprint("A probability-free proof of an explicit Croot-Laba-Sisask Lemma",
-	"", "Croot-Laba-Sisask-Lemma-02.pdf", 2022, 6, "");
-	nbrp();</script>
+    <li class="paper"><script language="javascript">
+	ToAppear("An explicit Croot-Laba-Sisask Lemma free of
+	probabilistic language",
+	"", "Croot-Laba-Sisask-Lemma-02.pdf",
+	"https://link.springer.com/journal/574",
+	"Bulletin of the Brazilian Mathematical Society, New Series",
+	2022, 6, "");
+	nbr();</script>
       <div class="resumecontent">
 	This note proposes a proof free of probabilistic language of the
   famous Croot-Laba-Sisask Lemma. In between, we do the same for the
