--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -1804,8 +1804,7 @@ e^v}}\nolimits'\frac{\Lambda(n)}n+v+\frac12\log(\frac{1-e^{v}}{1+e^v})+\gamma
   </li>
     <!-- ============================= -->
     <li class="paper"><script language="javascript">
-	ToAppear("An explicit Croot-Laba-Sisask Lemma free of
-	probabilistic language",
+	ToAppear("An explicit Croot-Laba-Sisask Lemma free of probabilistic language",
 	"", "Croot-Laba-Sisask-Lemma-02.pdf",
 	"https://link.springer.com/journal/574",
 	"Bulletin of the Brazilian Mathematical Society, New Series",
