--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -1286,7 +1286,7 @@ $
       "D.R. Johnston et T. Trudgian", "JRT_Submitted.pdf",
       "https://www.springer.com/journal/40993",
       "Research in Number Theory", 
-      "vol. ?", 2023, "17pp", 
+      "vol. 9, no. 4, Paper No.72", 2023, "20pp", 
       "");
       nbr();</script>
     <div class="resumecontent">
