--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -2388,9 +2388,13 @@ the fundamentals of analytic number theory. It will also appeal to
 researchers in mathematics and engineering interested in experimental
 techniques in this active area.
 <br>
- The <a href="https://www.maa.org/press/maa-reviews/excursions-in-multiplicative-number-theory">review</a>
- from MAA and
- the <a href="https://zbmath.org/?q=an%3A7349511">review</a> from ZentralBlatt.
+ Here are the <a href="https://www.maa.org/press/maa-reviews/excursions-in-multiplicative-number-theory">review</a>
+ from MAA,
+ the <a href="https://zbmath.org/?q=an%3A7349511">review</a> from
+ ZentralBlatt,
+ and the
+ <a href=https://mathscinet-ams-org.ezproxy.math.cnrs.fr/mathscinet/article?mr=4400952>
+ one</a> from MathScinet.
  <br> Typos <a href="../ExcursionsInMultiplicativeNT-Typos/contenu-typos.html">here</a>.
  </font>
 </blockquote>
