--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -1804,14 +1804,16 @@ e^v}}\nolimits'\frac{\Lambda(n)}n+v+\frac12\log(\frac{1-e^{v}}{1+e^v})+\gamma
   </li>
     <!-- ============================= -->
     <li class="paper"><script language="javascript">
-	ToAppear("An explicit Croot-Laba-Sisask Lemma free of probabilistic language",
-	"", "Croot-Laba-Sisask-Lemma-02.pdf",
+	Paper("An explicit Croot-Laba-Sisask Lemma free of probabilistic language",
+	"", "Croot-Laba-Sisask-Lemma-Brazil-04.pdf",
 	"https://link.springer.com/journal/574",
 	"Bulletin of the Brazilian Mathematical Society, New Series",
-	2022, 6, "");
+	"vol. 55 no. 2", 2024, "Paper No. 23", 
+        "https://link.springer.com/epdf/10.1007/s00574-024-00397-5?sharing_token=iSWVSFPPNFHiuXT6sRIcm_e4RwlQNchNByi7wbcMAY5KitXMWF4FY6dA0PwD3qGt13F6lUP-FBkU3KMSUzd7dPMULQy1ceCIF4LGrWzjBXR9Hw7JtmvA-moLrmssQsaAUBWAEXuP8e2tSUETFt5s4DN8LBKFfokb9Bb08dSl0_I%3D");
 	nbr();</script>
       <div class="resumecontent">
-	This note proposes a proof free of probabilistic language of the
+	This note proposes a proof aimed at number theorists and which
+  is free of probabilistic language of the
   famous Croot-Laba-Sisask Lemma. In between, we do the same for the
   Khintchine and Marcinkiewicz-Zygmund inequalities and explicitate the
   implied constants.
