--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -453,7 +453,7 @@ of A. S&aacute;rk&ouml;zy.
 	ToAppear("A spectral resolution of the large sieve",
 	      "", "LSE-46-N-04-submitted-1.pdf",
 	      "https://smf.emath.fr/publications/bulletin-de-la-societe-mathematique-de-france",
-	      "Bulletin de la Société Mathématique de France", 2024, 63);
+	      "Bulletin de la SociÃ©tÃ© MathÃ©matique de France", 2024, 63);
 	nbr();</script>
       <div class="resumecontent">
 	The quadratic form
